--- a/app/src/frontend/styles/forms.css
+++ b/app/src/frontend/styles/forms.css
@@ -33,7 +33,7 @@ label {
     margin-right: 0.25rem;
 }
 form .btn {
-    margin-top: 1em;
+    margin-bottom: 0.25rem;
 }
 .buttons-container.btn-center {
     margin-right: 0;
