--- a/app/src/frontend/legend.css
+++ b/app/src/frontend/legend.css
@@ -6,14 +6,32 @@
     position: absolute;
     bottom: 55px;
     right: 10px;
+    min-width: 7rem;
     float: right;
     background: white;
     border-radius: 4px;
-    padding: 0.25rem 0.5rem;
+    padding: 0.25rem 0;
+}
+@media (min-width: 380px){
+    .map-legend {
+        bottom: 40px;
+    }
+}
+@media (min-width: 1020px){
+    .map-legend {
+        bottom: 24px;
+    }
+}
+.map-legend h3,
+.map-legend h4,
+.data-legend {
+    padding: 0 0.5rem;
 }
 .data-legend {
+    max-height: 20rem;
+    overflow-y: auto;
     list-style: none;
-    padding: 0;
+    margin-bottom: 0;
 }
 .data-legend .key {
     display: inline-block;
@@ -23,4 +41,8 @@
     margin: 0.125rem 0.5rem 0.125rem 0;
     vertical-align: middle;
     overflow: hidden;
+}
+.map-legend .data-intro {
+    padding: 0 0.5rem;
+    opacity: 0.5;
 }
