--- a/app/src/frontend/legend.css
+++ b/app/src/frontend/legend.css
@@ -10,7 +10,9 @@
     float: right;
     background: white;
     border-radius: 4px;
-    padding: 0.25rem 0;
+    padding: 0.5rem 0 0.25rem;
+    border: 1px solid #fff;
+    box-shadow: 0px 0px 1px 1px #222222;
 }
 @media (min-width: 380px){
     .map-legend {
