--- a/app/src/frontend/map.css
+++ b/app/src/frontend/map.css
@@ -1,8 +1,22 @@
-
+.map-notice {
+    padding: 0.5rem 0.75rem;
+    background: #fff;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    z-index: 1000;
+    position: absolute;
+    left: 25.5rem;
+    top: 0.5rem;
+    box-shadow: 0px 0px 1px 1px #222;
+}
 .leaflet-container {
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
+}
+.leaflet-container .leaflet-control-zoom {
+    border: 1px solid #fff;
+    box-shadow: 0 0 1px 1px #222;
 }
