--- a/app/src/frontend/legend.css
+++ b/app/src/frontend/legend.css
@@ -10,7 +10,7 @@
     float: right;
     background: white;
     border-radius: 4px;
-    padding: 0.5rem 0 0.25rem;
+    padding: 0.5rem 0rem 0.25rem;
     border: 1px solid #fff;
     box-shadow: 0px 0px 1px 1px #222222;
 }
@@ -24,7 +24,6 @@
         bottom: 24px;
     }
 }
-.map-legend h3,
 .map-legend h4,
 .data-legend {
     padding: 0 0.5rem;
