--- a/app/src/frontend/sidebar.css
+++ b/app/src/frontend/sidebar.css
@@ -97,7 +97,7 @@
     border-color: #fff;
     border-top-color: #222;
     border-width: 1px 0 4px 0;
-    padding-top: 0.2rem;
+    padding-top: 4px;
 }
 .section-header h3 {
     display: inline-block;
@@ -205,7 +205,7 @@
     display: block;
     position: absolute;
     left: 0.55rem;
-    top: 0.4rem;
+    top: 0.5rem;
     width: 1.2rem;
     height: 1rem;
     text-align: center;
@@ -219,7 +219,7 @@
 }
 .section-header:hover > a::before,
 .section-header.active > a::before {
-    top: 0.6rem;
+    top: 0.7rem;
     content: '\25BC';
 }
 
