--- a/app/src/frontend/header.css
+++ b/app/src/frontend/header.css
@@ -1,14 +1,14 @@
 /**
  * Main header
  */
- .main-header {
+.main-header {
     display: block;
-    min-height: 82px;
+    min-height: 79px;
     text-decoration: none;
     border-bottom: 3px solid #222;
 }
 .main-header .navbar {
-    padding: 0.75em 0.75em;
+    padding: 0.75em 0.5em 0.75em;
 }
 .main-header .navbar-brand {
     margin: 0 1em 0 0;
