--- a/app/src/frontend/logo.css
+++ b/app/src/frontend/logo.css
@@ -14,7 +14,7 @@
 }
 .logo .logotype {
     font-size: 2rem;
-    margin: 0 0 0 3px;
+    margin: 0 0 -1px 3px;
     display: inline-block;
     vertical-align: bottom;
 }
@@ -28,17 +28,16 @@
     letter-spacing: 0;
 }
 .map-legend .logo {
-    padding: 0.5rem;
+    padding: 0 0.5rem 0.5rem;
 }
 .map-legend .logo .logotype {
-    font-size: 1.75rem;
-    position: relative;
-    top: 3px;
+    font-size: 1.9rem;
+    margin-bottom: -2px;
 }
 .map-legend .logo .row .cell {
     background-color: #ccc;
-    height: 10px;
-    width: 10px;
+    height: 12px;
+    width: 12px;
     animation: none !important;
 }
 .logo .grid {
@@ -57,8 +56,8 @@
 }
 .logo .cell {
     display: inline-block;
-    width: 15px;
-    height: 15px;
+    width: 14px;
+    height: 14px;
     margin: 0 3px 0 0;
 }
 .logo .row:nth-child(1) .cell:nth-child(1) {
