Implementation for: Hide or shrink theme switch button on mobile #273

--- a/app/src/frontend/theme-switcher.css
+++ b/app/src/frontend/theme-switcher.css
@@ -21,3 +21,9 @@
     background-image: none;
     border-color: #343a40;
 }
+@media (max-width: 768px){
+    .theme-switcher {
+        visibility: hidden;
+    }
+}
+
