--- a/app/src/frontend/sidebar.css
+++ b/app/src/frontend/sidebar.css
@@ -339,6 +339,7 @@ label .icon-buttons,
 }
 .data-section p {
     font-size: 1rem;
+    margin: 0.5rem 0;
 }
 .data-section ul {
     padding-left: 3.333rem;
