--- a/app/src/frontend/search-box.css
+++ b/app/src/frontend/search-box.css
@@ -1,8 +1,9 @@
 .search-box {
     position: absolute;
-    top: 3.625rem;
-    left: 25.5rem;
+    top: 0.5rem;
+    left: 0.5rem;
     z-index: 1000;
+    max-width:80%;
 }
 .building.search-box {
     top: 0.5rem;
@@ -26,4 +27,32 @@
     display: block;
     padding: 0.25rem 0.5rem;
     border-bottom: 1px solid #eee;
+}
+.collapse-btn {
+    position: absolute;
+    top: 0.5rem;
+    left: 0.5rem;
+    z-index: 1000;
+    background: #fff;
+    border-radius: 2px;
+    box-shadow: 0px 0px 1px 1px #222222;
+}
+.form-control {
+    padding: 0.1rem 0.1rem;
+    width: 180px;
+}
+.btn {
+   padding: 0.25rem 0.2rem;
+   margin-right: 0.1rem;
+}
+@media (min-width: 768px) {
+    /* for large screens adopt the conventional search box position */
+    .search-box{
+        top: 3.625rem;
+        left: 25.5rem;
+    }
+    /* The following is a fix (?) for the truncation of the "Search for postcode" text  */
+    .form-inline .form-control {
+        width: 200px;
+    }
 }
