--- a/app/src/frontend/search-box.css
+++ b/app/src/frontend/search-box.css
@@ -28,7 +28,7 @@
     padding: 0.25rem 0.5rem;
     border-bottom: 1px solid #eee;
 }
-.collapse-btn {
+.search-box .collapse-btn {
     position: absolute;
     top: 0.5rem;
     left: 0.5rem;
@@ -37,11 +37,11 @@
     border-radius: 2px;
     box-shadow: 0px 0px 1px 1px #222222;
 }
-.form-control {
+.search-box .form-control {
     padding: 0.1rem 0.1rem;
     width: 180px;
 }
-.btn {
+.search-box .btn {
    padding: 0.25rem 0.2rem;
    margin-right: 0.1rem;
 }
