--- a/app/src/frontend/search-box.css
+++ b/app/src/frontend/search-box.css
@@ -28,7 +28,7 @@
     padding: 0.25rem 0.5rem;
     border-bottom: 1px solid #eee;
 }
-.search-box .collapse-btn {
+.collapse-btn {
     position: absolute;
     top: 0.5rem;
     left: 0.5rem;
