--- a/app/src/frontend/header.css
+++ b/app/src/frontend/header.css
@@ -2,14 +2,27 @@
  * Main header
  */
 .main-header {
-    display: block;
-    min-height: 79px;
     text-decoration: none;
-    border-bottom: 3px solid #222;
+    border-bottom: 2px solid #222;
 }
 .main-header .navbar {
     padding: 0.75em 0.5em 0.75em;
 }
 .main-header .navbar-brand {
     margin: 0 1em 0 0;
+}
+
+.main-header .shorten-username {
+    text-overflow: '…)';
+    white-space: nowrap;
+    overflow: hidden;
+    display: inline-block;
+    vertical-align: bottom;
+    max-width: 70vw;
+}
+
+@media (min-width: 768px) {
+    .main-header .shorten-username {
+        max-width: 5vw;
+    }
 }
