--- a/app/src/frontend/building/categories.css
+++ b/app/src/frontend/building/categories.css
@@ -9,10 +9,11 @@
   text-align: center;
 }
 .data-category-list li {
+  position: relative;
   display: inline-block;
   vertical-align: bottom;
-  width: 11rem;
-  height: 11rem;
+  width: 10rem;
+  height: 10rem;
   margin: 0.375rem;
   box-shadow: 0 0 2px 5px #ffffff;
   transition: box-shadow 0.2s;
@@ -28,7 +29,7 @@
   display: block;
   padding: 0.1em;
   width: 100%;
-  height: 7rem;
+  height: 100%;
 }
 .data-category-list .category-link:hover,
 .data-category-list .category-link:active,
@@ -36,18 +37,24 @@
   color: #222;
 }
 .data-category-list .help {
-  height: 4rem;
-  padding: 1.5em 0;
-  width: 100%;
-  background-color: rgba(255,255,255,0.2);
-  transition: background-color 0.2s;
+  position: absolute;
+  bottom: 0.75rem;
+  right: 0.75rem;
+  color: #222;
 }
 .data-category-list .help:hover,
 .data-category-list .help:active,
 .data-category-list .help:focus {
-  color: #222;
-  background-color: rgba(255,255,255,0.3);
+  color: #000;
+  background-color: rgba(37, 10, 10, 0.3);
 }
+
+.data-category-list .help::before {
+  content: "\f05a";
+  font-family: FontAwesome;
+  margin-right: 0.25rem;
+}
+
 .data-category-list .category {
   text-align: center;
   font-size: 1.5em;
