--- a/app/src/frontend/styles/layout.css
+++ b/app/src/frontend/styles/layout.css
@@ -21,7 +21,7 @@ main {
     flex: 1;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    overflow: scroll;
 }
 
 @media(min-width: 768px) {
