Change greenery to streetscape

--- a/app/src/frontend/styles/colours.css
+++ b/app/src/frontend/styles/colours.css
@@ -80,7 +80,7 @@
 .background-sustainability {
     background-color: #5ec232;
 }
-.background-greenery {
+.background-streetscape {
     background-color: #6dbb8b;
 }
 .background-community {
