--- a/app/src/frontend/building/categories.css
+++ b/app/src/frontend/building/categories.css
@@ -26,7 +26,9 @@
   text-decoration: none;
 }
 .data-category-list .category-link {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0.1em;
   width: 100%;
   height: 100%;
@@ -36,32 +38,14 @@
 .data-category-list .category-link:focus {
   color: #222;
 }
-.data-category-list .help {
-  position: absolute;
-  bottom: 0.75rem;
-  right: 0.75rem;
-  color: #222;
-}
-.data-category-list .help:hover,
-.data-category-list .help:active,
-.data-category-list .help:focus {
-  color: #000;
-  background-color: rgba(37, 10, 10, 0.3);
-}
-
-.data-category-list .help::before {
-  content: "\f05a";
-  font-family: FontAwesome;
-  margin-right: 0.25rem;
-}
 
 .data-category-list .category {
   text-align: center;
-  font-size: 1.5em;
-  margin: 1.4em 0 0.5em;
+  font-size: 1.4em;
+  margin: 0 0 0.5em;
 }
 .data-category-list .description {
   text-align: center;
-  font-size: 1em;
-  margin: 0 0 1em;
+  font-size: 0.9em;
+  margin: 0;
 }
