Rewrite DataEntryGroup with hooks, child count

--- a/app/src/frontend/building/data-components/data-entry-group.css
+++ b/app/src/frontend/building/data-components/data-entry-group.css
@@ -7,6 +7,11 @@
     left: 1rem;
 }
 
+.data-entry-group-count {
+    font-size: 0.8em;
+    color: gray;
+}
+
 .data-entry-group-body {
     padding-left: 1rem;
 }
