Synchronise category colours with WIX page version

--- a/app/src/frontend/styles/colours.css
+++ b/app/src/frontend/styles/colours.css
@@ -57,38 +57,38 @@
  * Category colours
  */
 .background-location {
-    background-color: #edc40b;
+    background-color: #f7c625;
 }
 .background-use {
-    background-color: #f0ee0c;
+    background-color: #f7ec25;
 }
 .background-type {
-    background-color: #ff9100;
+    background-color: #f77d11;
 }
 .background-age {
-    background-color: #ee5f63;
+    background-color: #ff6161;
 }
 .background-size {
-    background-color: #ee91bf;
+    background-color: #f2a2b9;
 }
 .background-construction {
-    background-color: #aa7fa7;
+    background-color: #ab8fb0;
 }
 .background-streetscape {
-    background-color: #6f879c;
+    background-color: #718899;
 }
 .background-team {
-    background-color: #5ec232;
+    background-color: #7cbf39;
 }
 .background-sustainability {
-    background-color: #6dbb8b;
+    background-color: #57c28e;
 }
 .background-community {
-    background-color: #65b7ff;
+    background-color: #6bb1e3;
 }
 .background-planning {
-    background-color: #a1a3a9;
+    background-color: #aaaaaa;
 }
 .background-like {
-    background-color: #9c896d;
+    background-color: #a3916f;
 }
