--- a/app/src/frontend/building/sidebar.css
+++ b/app/src/frontend/building/sidebar.css
@@ -5,7 +5,7 @@
     order: 1;
     padding: 0 0 2em;
     background: #fff;
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 40%;
 }
 
@@ -34,6 +34,14 @@
     text-decoration: none;
     color: #222;
     padding: 0.75rem 0.25rem 0.5rem 0;
+    z-index: 1000;
+}
+
+@media (min-width: 768px) {
+    .section-header {
+        position: sticky;
+        top: 0;
+    }
 }
 .section-header h2,
 .section-header .icon-buttons {
