--- a/app/src/frontend/pages/welcome.css
+++ b/app/src/frontend/pages/welcome.css
@@ -9,7 +9,7 @@
     max-height: 100%;
     border-radius: 0;
     padding: 1.5em 2.5em 2.5em;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 .welcome-float.jumbotron {
     background: #fff;
