--- a/app/src/frontend/building/sidebar.css
+++ b/app/src/frontend/building/sidebar.css
@@ -30,6 +30,10 @@
     z-index: 1000;
 }
 
+.edit-history {
+    background-color: white;
+}
+
 @media (min-width: 768px) {
     .section-header {
         position: sticky;
