Improve edit history styling

--- a/app/src/frontend/building/edit-history/building-edit-summary.css
+++ b/app/src/frontend/building/edit-history/building-edit-summary.css
@@ -5,10 +5,10 @@
 
 
 .edit-history-timestamp {
-    font-size: 1rem;
+    font-size: 0.9em;
     padding: 0;
 }
 
 .edit-history-username {
-    font-size: 0.9rem;
+    font-size: 0.9em;
 }
