--- a/app/src/frontend/pages/welcome.css
+++ b/app/src/frontend/pages/welcome.css
@@ -6,12 +6,14 @@
     z-index: 10000;
     top: 0;
     width: 100%;
-    max-height: 100%;
+    max-height: 95%;
+    max-height: calc(100%-2em);
     border-radius: 0;
-    padding: 1.5em 2.5em 2.5em;
     overflow-y: auto;
 }
+
 .welcome-float.jumbotron {
+    padding: 1em 2.5em 1.5em;
     background: #fff;
     background-color: rgba(255,255,255,0.95);
 }
@@ -22,4 +24,8 @@
         width: 45em;
         top: 1em;
     }
+}
+
+.welcome-float .lead {
+    font-size: 1.15em;
 }
