--- a/app/src/frontend/map/map.css
+++ b/app/src/frontend/map/map.css
@@ -8,10 +8,17 @@
     box-shadow: 0px 0px 1px 1px #222;
     visibility: hidden;
 }
-
 .map-container {
-    flex: 1;
-    position: relative;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+@media (min-width: 768px) {
+    .map-container {
+        left: 480px;
+    }
 }
 .leaflet-container {
     height: 100%;
