--- a/app/src/frontend/header.css
+++ b/app/src/frontend/header.css
@@ -9,19 +9,43 @@
     width: 100%;
     background: #fff;
     text-decoration: none;
+    box-shadow: 2px 0px 2px -2px #000;
 }
-@media (min-width: 480px){
+@media (min-width: 768px){
     .main-header {
         width: 480px; /* to match .info-container menu width */
     }
 }
 .main-header .navbar {
-    padding: 0.5em 0.5em 0.5em;
+    padding: 0;
 }
 .main-header .navbar-brand {
-    margin: 0 1em 0 0;
+    margin: 12px;
+    padding: 0;
 }
 .main-header .navbar-collapse {
-    height: calc(100vh - 80px);
+    height: calc(100vh - 76px);
     overflow-y: auto;
+    transition: height 0.3s;
+}
+.navbar-collapse.collapse {
+    display: block ;
+    height: 0;
+}
+.navbar .nav-link {
+    padding: .5rem 1rem;
+}
+.navbar .navbar-toggler {
+    padding: .5rem .75rem .5rem .75rem;
+    margin-right: 12px;
+}
+.navbar .navbar-toggler-icon {
+    width: 1em;
+    height: 1em;
+}
+.navbar .close {
+    display: inline-block;
+    vertical-align: middle;
+    height: 1em;
+    padding: 0 3px;
 }
