--- a/app/src/frontend/map/map.css
+++ b/app/src/frontend/map/map.css
@@ -1,13 +1,3 @@
-.map-notice {
-    padding: 0.5rem 0.75rem;
-    background: #fff;
-    border: 1px solid #fff;
-    border-radius: 4px;
-    z-index: 1000;
-    position: absolute;
-    box-shadow: 0px 0px 1px 1px #222;
-    visibility: hidden;
-}
 .map-container {
     position: absolute;
     top: 0;
@@ -28,21 +18,29 @@
     border: 1px solid #fff;
     box-shadow: 0 0 1px 1px #222;
 }
-
 .leaflet-container .leaflet-control-attribution {
     width: 100%;
     background: #fff;
     background: rgba(255, 255, 255, 0.7);
 }
-
 .leaflet-grab {
     cursor: crosshair;
+}
+.map-notice {
+    position: absolute;
+    top: 3.5rem;
+    left: 0.5rem;
+    z-index: 1000;
+    padding: 0.5rem 0.75rem;
+    background: #fff;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    box-shadow: 0px 0px 1px 1px #222;
+    display: none;
 }
 @media (min-width: 768px){
     /* Only show the "Click a building ..." notice for larger screens */
     .map-notice {
-        left: 0.5rem;
-        top: 3.5rem;
-        visibility: visible;
+        display: block;
     }
 }
