--- a/app/src/frontend/pages/welcome.css
+++ b/app/src/frontend/pages/welcome.css
@@ -4,7 +4,7 @@
 .welcome-float {
     position: absolute;
     z-index: 10000;
-    top: 0;
+    top: 100px;
     width: 100%;
     max-height: 95%;
     max-height: calc(100%-2em);
@@ -22,7 +22,6 @@
         left: 50%;
         margin-left: -22.5em;
         width: 45em;
-        top: 1em;
     }
 }
 
