--- a/app/src/frontend/pages/welcome.css
+++ b/app/src/frontend/pages/welcome.css
@@ -8,19 +8,26 @@
     width: 100%;
     max-height: 95%;
     max-height: calc(100%-2em);
-    border-radius: 0;
     overflow-y: auto;
 }
 
 .welcome-float.jumbotron {
     padding: 1em 2.5em 1.5em;
     background: #fff;
-    background-color: rgba(255,255,255,0.95);
+    background-color: rgba(255,255,255,0.9);
+    box-shadow: #000 0px 0px 2px -1px;
 }
-@media (min-width: 768px){
+@media (min-width: 990px) and (max-width: 1199px){
+    .welcome-float {
+        right: 5%;
+        width: 30em;
+        max-height: 80vh;
+    }
+}
+@media (min-width: 1200px){
     .welcome-float {
         left: 50%;
-        margin-left: -22.5em;
+        margin-left: -120px; /* 480 -360 */
         width: 45em;
     }
 }
